<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Application Manager</string>
    <string name="title_activity_main">Application manager</string>
    <string name="agency_fragment_title">Agency</string>
    <string name="title_activity_add_agency">Add agency</string>
    <string name="save">Save</string>
    <string name="agency_name">Agency name</string>
    <string name="agency_saved">Agency %1$s saved successfully</string>
    <string name="error_saving_agency">Error saving agency</string>
    <string name="edit">Edit</string>
    <string name="title_activity_add_agent">Add agent</string>
    <string name="agent_saved">Agent %1$s saved</string>
    <string name="error_saving_agent">Error saving agent</string>
    <string name="agent_name">Name</string>
    <string name="agent_last_contact">Last contact</string>
    <string name="title_activity_agency_detail">AgencyDetailActivity</string>
    <string name="agent_fragment_title">Agents</string>
    <string name="agent_greeting">Greeting</string>
    <string name="agent_agency">Agency</string>
    <string name="application_fragment_title">Applications</string>
    <string name="title_activity_add_application">Add Application</string>
    <string name="agent_detail_fragment_title">Details</string>
    <string name="application_company_name">Company Name</string>
    <string name="application_agent">Agent</string>
    <string name="application_application_date">Application Date</string>
    <string name="application_state">State</string>
    <string name="title_activity_application_detail">ApplicationDetailActivity</string>
    <string name="application_saved">Application %1$s saved</string>
    <string name="error_saving_application">Error saving application</string>
    <string name="edit_last_contact">Last contact</string>
    <string name="edit_state">Edit status</string>
    <string name="call">call</string>
</resources>
