<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="application" type="de.knerd.applicationmanager.models.ApplicationModel"/>
    </data>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  app:layout_behavior="@string/appbar_scrolling_view_behavior"
                  tools:showIn="@layout/activity_application_detail"
                  tools:context="de.knerd.applicationmanager.activities.ApplicationDetailActivity"
                  android:orientation="vertical">
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       android:layout_marginTop="@dimen/text_margin"
                                                       android:layout_marginLeft="@dimen/text_margin"
                                                       android:layout_marginRight="@dimen/text_margin"
                                                       android:orientation="horizontal">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@{application.applicationDateFormatted}"
                      android:ems="10"
                      android:editable="false"
                      android:hint="@string/application_application_date"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       android:layout_marginLeft="@dimen/text_margin"
                                                       android:layout_marginRight="@dimen/text_margin"
                                                       android:orientation="horizontal">
            <EditText android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@{application.agent.name}"
                      android:ems="10"
                      android:editable="false"
                      android:hint="@string/agent_name" android:id="@+id/editText2"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                     android:layout_height="wrap_content"
                                                     android:layout_marginLeft="@dimen/text_margin"
                                                     android:layout_marginRight="@dimen/text_margin"
                                                     android:layout_marginBottom="@dimen/text_margin"
                                                     android:orientation="horizontal"
                                                     android:visibility="gone">
            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/edit_state"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:id="@+id/state">
                <EditText android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:hint="@string/application_state"
                          android:text="@{application.state}"/>
            </android.support.design.widget.TextInputLayout>
            <ImageButton android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/edit"
                         android:contentDescription="@string/edit_state"
                         android:layout_marginEnd="0dp"
                         app:layout_constraintLeft_toRightOf="@+id/state"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
                         android:id="@+id/edit_state"
                         android:onClick="editState"/>
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</layout>
